--- a/public/game/index.html
+++ b/public/game/index.html
@@ -13,9 +13,19 @@
         </noscript>
         <h1>Unfold Stories</h1>
         <p id="root">{instructions...}</p>
-        <form action="/new" method="GET" >
-            <input type="text" disabled />
-            <input type="submit" value="Start a new game" />
+        <form>
+            <input type="text" placeholder="Your name" />
+            <input type="submit" value="Join" />
+        </form>
+        <div>
+            <h2>Players</h2>
+            <ul>
+                <li>Player placeholder</li>
+            </ul>
+        </div>
+        <form>
+            <input type="submit" value="Start game" />
+            <inpu type="hidden" />
         </form>
     </body>
 </html>
