--- a/public/game/index.html
+++ b/public/game/index.html
@@ -25,7 +25,7 @@
         </div>
         <form>
             <input type="submit" value="Start game" />
-            <inpu type="hidden" />
+            <input type="hidden" />
         </form>
     </body>
 </html>
