--- a/public/index.html
+++ b/public/index.html
@@ -4,8 +4,8 @@
         <meta charset="utf-9">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>Unfold Stories</title>
-        <link rel="stylesheet" href="./styles.css"/>
-        <script type="text/javascript" src="./scripts.js" defer></script>
+        <link rel="stylesheet" href="public/styles.css"/>
+        <script type="text/javascript" src="public/scripts.js" defer></script>
     </head>
     <body>
         <noscript>
@@ -13,9 +13,9 @@
         </noscript>
         <h1>Unfold Stories</h1>
         <p id="root">{instructions...}</p>
-        <form action="/new" method="GET" >
+        <form action="/game" method="get">
             <input type="text" disabled />
-            <input type="submit" value="Start a new game" />
+            <input id="game" type="submit" value="Start a new game" />
         </form>
     </body>
 </html>
