--- a/public/game/index.html
+++ b/public/game/index.html
@@ -17,10 +17,9 @@
             <input name="name" id="name" type="text" placeholder="Your name" />
             <input type="submit" value="Join" />
         </form>
-        <div>
+        <div id="players">
             <h2>Players</h2>
             <ul>
-                <li>Player placeholder</li>
             </ul>
         </div>
         <form>
