get game lines to display

--- a/public/game/index.html
+++ b/public/game/index.html
@@ -19,7 +19,7 @@
         </form>
         <div id="players">
             <h2>Players</h2>
-            <ul>
+            <ul id="player-list">
             </ul>
         </div>
         <form>
