work on game line logic

--- a/public/game/index.html
+++ b/public/game/index.html
@@ -7,7 +7,7 @@
         <link rel="stylesheet" href="public/game/styles.css"/>
         <script type="text/javascript" src="public/game/scripts.js" defer></script>
     </head>
-    <body>
+    <body id="body">
         <noscript>
             You need to enable JavaScript to run this app.
         </noscript>
@@ -22,9 +22,5 @@
             <ul id="player-list">
             </ul>
         </div>
-        <form>
-            <input type="submit" value="Start game" />
-            <input type="hidden" />
-        </form>
     </body>
 </html>
