--- a/public/game/index.html
+++ b/public/game/index.html
@@ -4,8 +4,8 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>Unfold Stories</title>
-        <link rel="stylesheet" href="public/game/styles.css"/>
-        <script type="text/javascript" src="public/game/scripts.js" defer></script>
+        <link rel="stylesheet" href="/public/game/styles.css"/>
+        <script type="text/javascript" src="/public/game/scripts.js" defer></script>
     </head>
     <body id="body">
         <noscript>
